kubernetes/raspberry/default/homepage/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homepage
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homepage
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "3000"
